<?xml version="1.0"?>
<package format="2">
  <name>rtp_msgs</name>
  <version>0.1.0</version>
  <description>The rtp_msgs package</description>

  <maintainer email="radinov@nkbvs.ttn.ru">Ivan Radionov</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
